@@ -62,15 +62,17 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 546)
-(Parent-Version lpmud 3-3 545)
+(Project-Version lpmud 3-3 547)
+(Parent-Version lpmud 3-3 546)
 (Version-Log "
-  - (comm.c, simul_efun.c) Corrected compilation errors (thanks, Ralph!)
+  - (configure, my-stdint.h, sha1.h) Added a test for and a replacement
+       of the C99 include file stdint.h, which is required by the sha1
+       code (reported by Joseph).
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Fri, 14 May 2004 06:43:03 -0600")
+(Checkin-Time "Sat, 15 May 2004 23:16:36 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -108,20 +110,20 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.76 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.609 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.610 644))
   (HISTORY (lpmud/f/49_HISTORY 1.352 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.102 755))
+  (src/configure (lpmud/d/0_configure 1.19.1.103 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.37 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.12 644))
-  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.25 644))
+  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.26 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.92 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.93 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.10 644))
 
   (src/settings/README (lpmud/c/22_README 1.14.1.16 644))
@@ -188,7 +190,7 @@
   (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.90 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.7 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
-  (src/files.c (lpmud/i/50_files.c 1.24 644))
+  (src/files.c (lpmud/i/50_files.c 1.25 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.15 644))
   (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.112 644))
@@ -215,6 +217,7 @@
   (src/mstrings.c (lpmud/i/36_mstrings.c 1.21.1.28 644))
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
+  (src/my-stdint.h (lpmud/u/b/39_my-stdint. 1.1 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.4 644))
   (src/object.c (lpmud/45_object.c 1.62.1.88.1.42 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
@@ -289,7 +292,7 @@
   (src/regexp.h (lpmud/35_regexp.h 1.11.1.5 644))
   (src/regexp.c (lpmud/36_regexp.c 1.17.1.4.1.11 644))
   (src/sent.h (lpmud/33_sent.h 1.11.1.4 644))
-  (src/sha1.h (lpmud/t/b/33_sha1.h 1.2 644))
+  (src/sha1.h (lpmud/t/b/33_sha1.h 1.3 644))
   (src/sha1.c (lpmud/t/b/34_sha1.c 1.2 644))
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.6 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.7 644))
@@ -345,7 +348,7 @@
   (src/hosts/be/config.h (lpmud/e/34_config.h 1.32.1.39 644))
   (src/hosts/be/be.h (lpmud/e/35_be.h 1.7 644))
   (src/hosts/be/beyacc (lpmud/i/39_beyacc 1.1 744))
-  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.71.1.22 644))
+  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.71.1.23 644))
   (src/hosts/be/icon-32x32.raw (lpmud/s/37_icon-32x32 1.1 644) :no-keywords)
   (src/hosts/be/icon-16x16.raw (lpmud/s/38_icon-16x16 1.1 644) :no-keywords)
   (src/hosts/be/driver.rsrc (lpmud/s/39_driver.rsr 1.1 644) :no-keywords)
