@@ -517,6 +517,7 @@ dnl Checking for headers
 AC_CHECK_HEADERS(sys/rusage.h sys/time.h unistd.h stdlib.h libc.h memory.h)
 AC_CHECK_HEADERS(values.h string.h bstring.h netdb.h crypt.h sys/param.h sys/termios.h)
 AC_HEADER_STDC
+AC_CHECK_HEADERS(stdint.h)
 dnl extra check for <limits.h>; must be there!
 AC_CHECK_HEADERS(limits.h)
 AC_HEADER_DIRENT
