@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+15-May-2004 (Lars Duening)  (3.3.547)
+  - (configure, my-stdint.h, sha1.h) Added a test for and a replacement
+       of the C99 include file stdint.h, which is required by the sha1
+       code (reported by Joseph).
+
 14-May-2004 (Lars Duening)  (3.3.546)
   - (comm.c, simul_efun.c) Corrected compilation errors (thanks, Ralph!)
 
